# compaction

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
app/: CMakeLists.txt  main.c
includes/c_template/: hello.h
includes/compaction/: compaction.h  helpers.h
src/: CMakeLists.txt  compaction.c  hello.c  helpers.c
tests/: CMakeLists.txt  test_compaction.cpp  test_hello.cpp  test_helpers.cpp
